# cpr_gazebo

./: README.md
cpr_accessories_gazebo/: CHANGELOG.rst  CMakeLists.txt  model.config  package.xml
cpr_accessories_gazebo/meshes/: BaseStation.dae  BaseStation.stl  BaseStationWithTripod.dae  BaseStationWithTripod.stl  WiboticTR301.stl
cpr_accessories_gazebo/urdf/: base_station.urdf.xacro  charge_dock.urdf.xacro
cpr_agriculture_gazebo/: CHANGELOG.rst  CMakeLists.txt  model.config  package.xml
cpr_agriculture_gazebo/docs/: README.md
cpr_agriculture_gazebo/launch/: agriculture_world.launch  spawn_moose.launch  spawn_warthog.launch  view_world.launch
cpr_agriculture_gazebo/rviz/: world.rviz
cpr_agriculture_gazebo/scripts/: datum.bash
cpr_agriculture_gazebo/urdf/: agriculture_geometry.urdf.xacro
cpr_agriculture_gazebo/worlds/: actually_empty_world.world
cpr_empty_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
cpr_empty_gazebo/docs/: README.md
cpr_empty_gazebo/launch/: empty_world.launch  spawn_boxer.launch  spawn_dingo.launch  spawn_husky.launch  spawn_jackal.launch  spawn_ridgeback.launch  spawn_warthog.launch  view_world.launch
cpr_empty_gazebo/rviz/: world.rviz
cpr_empty_gazebo/urdf/: empty_geometry.urdf.xacro
cpr_empty_gazebo/worlds/: actually_empty_world.world
cpr_inspection_gazebo/: CHANGELOG.rst  CMakeLists.txt  model.config  package.xml
cpr_inspection_gazebo/docs/: README.md
cpr_inspection_gazebo/launch/: inspection_world.launch  spawn_heron.launch  spawn_husky.launch  spawn_jackal.launch  spawn_moose.launch  spawn_warthog.launch  view_world.launch
cpr_inspection_gazebo/meshes/: inspection_water.dae  inspection_world.dae
cpr_inspection_gazebo/rviz/: world.rviz
cpr_inspection_gazebo/scripts/: datum.bash
cpr_inspection_gazebo/urdf/: inspection_geometry.urdf.xacro  inspection_water.urdf.xacro
cpr_inspection_gazebo/worlds/: actually_empty_world.world  inspection_world.world
cpr_obstacle_gazebo/: CHANGELOG.rst  CMakeLists.txt  model.config  package.xml
cpr_obstacle_gazebo/docs/: README.md
cpr_obstacle_gazebo/launch/: cpr_obstacle_world.launch  spawn_boxer.launch  spawn_jackal.launch  spawn_warthog.launch  view_world.launch
cpr_obstacle_gazebo/models/: obstacle_world.stl  obstacle_world_ground.stl
cpr_obstacle_gazebo/rviz/: world.rviz
cpr_obstacle_gazebo/urdf/: materials.urdf.xacro  obstacle_geometry.urdf.xacro
cpr_office_gazebo/: CHANGELOG.rst  CMakeLists.txt  model.config  package.xml
cpr_office_gazebo/docs/: LICENSE.txt  README.md
cpr_office_gazebo/launch/: office_construction_world.launch  office_world.launch  spawn_dingo.launch  spawn_husky.launch  spawn_jackal.launch  spawn_ridgeback.launch  spawn_warthog.launch  view_office_construction_world.launch  view_office_world.launch
cpr_office_gazebo/meshes/: office.dae  office_construction.dae
cpr_office_gazebo/rviz/: world.rviz
cpr_office_gazebo/urdf/: office_construction_geometry.urdf.xacro  office_geometry.urdf.xacro
cpr_office_gazebo/worlds/: actually_empty_world.world
cpr_orchard_gazebo/: CHANGELOG.rst  CMakeLists.txt  model.config  package.xml
cpr_orchard_gazebo/docs/: README.md
cpr_orchard_gazebo/launch/: orchard_world.launch  spawn_husky.launch  spawn_jackal.launch  spawn_warthog.launch  view_world.launch
cpr_orchard_gazebo/meshes/: orchard_world.dae
cpr_orchard_gazebo/rviz/: world.rviz
cpr_orchard_gazebo/scripts/: datum.bash
cpr_orchard_gazebo/urdf/: orchard_geometry.urdf.xacro
cpr_orchard_gazebo/worlds/: actually_empty_world.world
cpr_race_modules/: CHANGELOG.rst  CMakeLists.txt  model.config  package.xml
cpr_race_modules/docs/: README.md
cpr_race_modules/launch/: object_descriptions.launch  test_small_track.launch
cpr_race_modules/meshes/: large_black_edge_corner_complex.dae  large_black_edge_straight_complex.dae  large_mud_corner_complex.dae  large_mud_corner_simple.dae  large_mud_straight_complex.dae  large_mud_straight_simple.dae  large_road_straight_complex.dae  large_road_straight_simple.dae  small_black_edge_corner_complex.dae  small_black_edge_corner_simple.dae  small_dirt_straight_complex.dae  small_mud_corner_complex.dae  small_mud_corner_simple.dae  small_racing_edge_corner_complex.dae  small_racing_edge_corner_simple.dae  small_racing_edge_straight_complex.dae  small_racing_edge_straight_simple.dae  small_road_corner_simple.dae  small_road_straight_complex.dae
cpr_race_modules/urdf/: ground_complex.urdf.xacro  ground_simple.urdf.xacro  large_black_edge_corner_complex.urdf.xacro  large_black_edge_corner_simple.urdf.xacro  large_black_edge_straight_complex.urdf.xacro  large_black_edge_straight_simple.urdf.xacro  large_dirt_corner_complex.urdf.xacro  large_dirt_corner_simple.urdf.xacro  large_dirt_straight_complex.urdf.xacro  large_dirt_straight_simple.urdf.xacro  large_mud_corner_complex.urdf.xacro  large_mud_corner_simple.urdf.xacro  large_mud_straight_complex.urdf.xacro  large_mud_straight_simple.urdf.xacro  large_racing_edge_corner_complex.urdf.xacro  large_racing_edge_corner_simple.urdf.xacro  large_racing_edge_straight_complex.urdf.xacro  large_racing_edge_straight_simple.urdf.xacro  large_road_corner_complex.urdf.xacro  large_road_corner_simple.urdf.xacro  large_road_straight_complex.urdf.xacro  large_road_straight_simple.urdf.xacro  small_black_edge_corner_complex.urdf.xacro  small_black_edge_corner_simple.urdf.xacro  small_black_edge_straight_complex.urdf.xacro  small_black_edge_straight_simple.urdf.xacro  small_dirt_corner_complex.urdf.xacro  small_dirt_corner_simple.urdf.xacro  small_dirt_straight_complex.urdf.xacro  small_dirt_straight_simple.urdf.xacro  small_mud_corner_complex.urdf.xacro  small_mud_corner_simple.urdf.xacro  small_mud_straight_complex.urdf.xacro  small_mud_straight_simple.urdf.xacro  small_racing_edge_corner_complex.urdf.xacro  small_racing_edge_corner_simple.urdf.xacro  small_racing_edge_straight_complex.urdf.xacro  small_racing_edge_straight_simple.urdf.xacro  small_road_corner_complex.urdf.xacro  small_road_corner_simple.urdf.xacro  (+2 more)
cpr_race_modules/worlds/: actually_empty_world.world
(+93 files in other folders)
