<?xml version="1.0"?>
<package format="2">
  <name>cpr_accessories_gazebo</name>
  <version>0.2.8</version>
  <description>The cpr_accessories_gazebo package</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
