<?xml version="1.0"?>
<package format="2">
  <name>gazebo_race_modules</name>
  <version>0.0.0</version>
  <description>The gazebo_race_modules package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>
