<?xml version="1.0"?>
<package format="2">
  <name>gazebo_race_modules</name>
  <version>0.2.3</version>
  <description>The gazebo_race_modules package</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>
